--- a/views/generalSearch.ejs
+++ b/views/generalSearch.ejs
@@ -1,41 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="<%=root%>/css/searchPage.css">
-    <link rel="stylesheet" href="<%=root%>/css/dashboard.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
-    crossorigin="anonymous"></script>
-    <title>Search Food</title>
-</head>
-<body>
-  <div class="navbar-fixed">
-    <nav class="white">
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="" class="brand-logo"><img src="https://i.ibb.co/stzNwrf/cook-helper-logo.png" alt="cook helper" height = 60 weight = 60></a>
-          <a href="#" class = "black-text sidenav-trigger" data-target = "mobile-nav">
-              <i class="fas fa-bars fa-2x"></i>
-          </a>
-          <ul class="right hide-on-med-and-down black-text">
-            <li>
-              <a id = 'dashboard-link' style = "color: #f3979a;" href="<%=root%>/user/dashboard" class="waves-effect"><strong>Dashboard</strong></a>
-            </li>
-            <li>
-                <a style = "color: #EE7176;" href="" class="waves-effect">Search</a>
-            </li>
-            <li>
-              <a style = "color: #f3979a;" href="" class="waves-effect">Settings</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
+<%- include('navbar', {title: 'Search'}) %> 
     
 
     <!--Side Nav for mobile view-->
@@ -112,6 +75,10 @@
   function sendToRelevantPage(id){
     location.href = `<%=root%>/user/food/${id}`;
   }
+  document.getElementById('dashboardLink').style.color = '#F3979A'; 
+  document.getElementById('searchLink').style.color = '#EE7176 '; 
+  document.getElementById('settingsLink').style.color = '#F3979A'; 
+  
 </script>
 </body>
 </html>
