--- a/public/css/shopping.css
+++ b/public/css/shopping.css
@@ -11,3 +11,22 @@
 .item-name {
   padding-left: 5px;
 }
+
+#btnDiv {
+  float: left;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+
+#clearBtn {
+  border-radius: 5%;
+  width: 100%;
+}
+
+.dangerButton {
+  background-color: red;
+}
+
+.recommendedButton {
+  background-color: green;
+}
