--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -4,63 +4,101 @@
  <ul class="sidenav" id = "mobile-nav">
   <p class = "sideMenuText"><strong>Main Menu</strong></p>
   <li><a  href="">Dashboard</a></li>
+  <li><a  href="<%=root %>/user/shoppinglist">Shopping List</a></li>
   <li><a  href = "<%=root%>/user/search">Search</a></li>
   <li><a  href="#settings">Settings</a></li>
   <div class="divider"></div>
   <p class = "sideMenuText "> <strong>Food Categories</strong></p>
-  <li id = "featuredSideTab"><a  href="?category=recfoods">Featured</a></li>
-  <li id = "fastFoodSideTab"><a  href="?category=fastfoods">Fast Foods</a></li>
-  <li id = "meatCornerSideTab"><a  href="?category=meatcorner">Meat Corner</a></li>
-  <li id = "lowFatSideTab"><a  href="?category=lowfat">Low Fat</a></li>
+  <li id = "recfoodsSide"><a  href="?category=recfoods">Featured</a></li>
+  <li id = "fast-foodSide"><a  href="?category=fast-food">Fast Foods</a></li>
+  <li id = "meatySide"><a  href="?category=meaty">Meat Corner</a></li>
+  <li id = "low-fatSide"><a  href="?category=low-fat">Low Fat</a></li>
+  <li id = "high-carbSide"><a  href="?category=high-carb">High Carb</a></li>
+  <li id = "seafoodSide"><a  href="?category=seafood">Seafood</a></li>
+  <li id = "sweetSide"><a  href="?category=sweet">Sweets</a></li>
+  <li id = "snacksSide"><a  href="?category=snacks">Snacks</a></li>
 </ul>
 
-    
-<!--Food Categories Tab-->
-   <div style="padding-top: 2px;" class="navbar-fixed hide-on-med-and-down">
-    <nav class="white">
-      <div class="nav-wrapper">
-        <div style="width: 100%;" class="row">
-          <ul style="border:none;" id = "tabsBar"  class="tabs tab-demo  hide-on-med-and-down">
-            <li  class="tab col s3"><a id = "recFoodsTab" href="?category=recfoods">Featured Foods</a></li>
-            <li class="tab col s3"><a id = "fastFoodsTab"   href="?category=fastfoods">Fast Foods</a></li>
-            <li class="tab col s3"><a id = "meatCornerTab" href="?category=meatcorner">Meat Corner</a></li>
-            <li class="tab col s3"><a id = "lowFatTab" href="?category=lowfat">Low-Fat</a></li>
-            <!-- <li class="tab col s3"><a id = "searchTab" href="?category=search">Search</a></li> -->
-          </ul>
-        </div>
-       </div>
-    </nav>
-   </div>
-   
+  <div class="row">
+      <div class="col m3 l3 hide-on-small-only">
+          <div id = "sideMenu" class="container">
+            <p  class = "menuLabel"> <strong>Menu</strong></p>
+            <div class="divider"></div>
+            <div class="sideMenuItem"><a id = "recfoods" href="?category=recfoods">Featured Foods</a></div>
+            <div class="sideMenuItem"><a id = "fast-food" href="?category=fast-food">Fast Foods</a></div>
+            <div class="sideMenuItem"><a id = "meaty" href="?category=meaty">Meat Corner</a></div>
+            <div class="sideMenuItem"><a id = "low-fat" href="?category=low-fat">Low-Fat</a></div>
+            <div class="sideMenuItem"><a id = "high-carb" href="?category=high-carb">High Carb</a></div>
+            <div class="sideMenuItem"><a id = "seafood" href="?category=seafood">Seafood</a></div>
+            <div class="sideMenuItem"><a id = "sweet" href="?category=sweet">Sweets</a></div>
+            <div class="sideMenuItem"><a id = "snacks" href="?category=snacks">Snacks</a></div>
 
-    <!--Featured foods-->
-<section id="works" class="section section-cardinfo scrollspy">
-    <div id="foodsection" class = "container">
-      <% foods.forEach(function(food) {%>
-        <div class="row">
-        <div class="col s6 m4 l3">
-          <div class="card z-depth-1 hoverable">
-            <div class="card-image">
-                <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')" src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
-            </div>
-            <div class="card-action" >
-              <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
-            </div>
           </div>
+      </div>
+      <div class="col s12 m9 l9">
+        <br>
+        <div class="input-field col s6">
+          <input placeholder="e.g. Hot dog" id="searchField" type="text" class="validate">
+          <label for="searchField">Search</label>
+        </div> 
+        <div class="input-field col s6 l3">
+          <select multiple>
+              <option value="1" disabled selected>None</option>
+            <optgroup label="team 1"></optgroup>
+              <option value="2">Option 2</option>
+              <option value="3">Option 3</option>
+            </optgroup>
+            <optgroup label="team 2">
+              <option value="4">Option 3</option>
+              <option value="5">Option 4</option>
+            </optgroup>
+          </select>
+          <label>Filter</label>
         </div>
-    <% }); %> 
-  </div> 
+        <br><br><br><br>
+        <div class="section section-cardinfo scrollspy">
+          <div id="foodsection">
+              <div class = "row">
+              <% foods.forEach(function(food) {%>
+              <div class="col s6 m4 l3">
+                <div class="card z-depth-1 hoverable">
+                  <div class="card-image">
+                      <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')" src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
+                  </div>
+                  <div class="card-action" >
+                    <a href="#" style="color: #EE7176;" class = "waves-effect truncate"><%= food.name %> </a>
+                  </div>
+                </div>
+              </div>
+              <% }); %> 
+              </div> 
+          </div>  <!--end of foodsection container -->
+        </div>  <!--end of card view of the foods --> 
     </div>
-</section>
+  </div>
+  
+    <!-- Dropdown Structure -->
+    <ul id='dropdown1' class='dropdown-content'>
+      <li><a id = "recFoodsTab" href="?category=recfoods">Featured Foods</a></li>
+      <li><a id = "fastFoodsTab" href="?category=fast-food">Fast Foods</a></li>
+      <!-- <li class="divider" tabindex="-1"></li> -->
+      <li><a id = "meatCornerTab" href="?category=meaty">Meat Corner</a></li>
+      <li><a id = "lowFatTab" href="?category=low-fat">Low-Fat</a></li>
+    </ul>
+  
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-<script src="<%=root%>/js/dashboard.js"></script>
 <script>
   function sendToRelevantPage(id){
     location.href = `<%=root%>/user/food/${id}`;
   }
+  let selectedTab = `<%=tab%>`;
+  let selectedSideTab = `<%=sideTab%>`;
 
   document.getElementById('dashboardLink').style.color = '#EE7176'; 
 </script>
+<script src="<%=root%>/js/dashboard.js"></script>
+
 </body>
 </html>
