--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -20,7 +20,7 @@
     <nav class="white">
       <div class="container">
         <div class="nav-wrapper">
-          <a href="" class="brand-logo"><img src="https://i.ibb.co/stzNwrf/cook-helper-logo.png" alt="cook helper" height = 60 weight = 60></a>
+          <a href="<%= root %>/user/dashboard " class="brand-logo"><img src="https://i.ibb.co/stzNwrf/cook-helper-logo.png" alt="cook helper" height = 60 weight = 60></a>
           <!-- <a style="color: #EE7176" href="" class="brand-logo"> COOK HELPER</a> -->
           <a href="#" class = "black-text sidenav-trigger" data-target = "mobile-nav">
               <i class="fas fa-bars fa-2x"></i>
