--- a/views/foodPage.ejs
+++ b/views/foodPage.ejs
@@ -2,10 +2,7 @@
 
       <!--Side Nav for mobile view-->
         <ul class="sidenav" id = "mobile-nav">
-            <p class = "sideMenuText"><strong>Main Menu</strong></p>
-            <li><a  href="<%=root%>/user/dashboard">Dashboard</a></li>
-            <li><a  href = "<%=root%>/user/search">Search</a></li>
-            <li><a  href="">Settings</a></li>
+           <%- include('sideMenuMain') %> 
         </ul>
 
       <div class="section">
