--- a/views/searchIngredients.ejs
+++ b/views/searchIngredients.ejs
@@ -2,11 +2,8 @@
 
       <!--Side Nav for mobile view-->
       <ul class="sidenav" id = "mobile-nav">
-        <p class = "sideMenuText"><strong>Main Menu</strong></p>
-        <li><a  href="<%=root%>/user/dashboard">Dashboard</a></li>
-        <li><a  href="#settings">Search</a></li>
-        <li><a  href="#settings">Settings</a></li>
-        <hr>
+        <%- include('sideMenuMain') %> 
+        <div class="divider"></div>
         <p class = "sideMenuText"><strong>Search Type</strong></p>
         <li><a  href="">General</a></li>
         <li style="background-color: #ee7176;"><a  href="<%=root%>/user/search/ingredients">By Ingredient</a></li>
