improved steps, separate files for steps

--- a/views/foodPage.ejs
+++ b/views/foodPage.ejs
@@ -53,7 +53,7 @@
                           <p style="color:red" id="warning"></p>
                       </div>
                       </div>
-                      <div class = "hide" id="#steps"><%= food.steps %> </div>
+                      <div class = "hide" id="#steps"><%- include(food.steps)%> </div>
                   </div>
                 </div>
                 
