--- a/views/foodPage.ejs
+++ b/views/foodPage.ejs
@@ -35,6 +35,7 @@
                   <div class="container">
                       <div class = "hide" id="#description">
                         <p><strong>Calories: </strong> <%= food.calories %> </p>
+                        <p><strong>Category: </strong> <%= food.category %> </p>
                         <p><strong>Approximate time: </strong> <%= food.approximateTimeInMinutes %> minutes</p>
                         <p><strong>Difficulty Level: </strong><%= food.difficultyLevel %> </p>
                         <p><strong>Description: </strong><%= food.description %></p>  <br>
