--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,23 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css" integrity="sha512-EZLkOqwILORob+p0BXZc+Vm3RgJBOe1Iq/0fiI7r/wJgzOFZMlsqTa29UEl6v6U6gsV4uIpsNZoV32YZqrCRCQ==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <title>Login</title>
 </head>
 <body>
-    <h1>Login page</h1>
-    <form id ="form">
-        <label for="email">Enter your email</label>
-        <input type="email" name = "email" id = "email" required>
-        <label for="password">Enter your password</label>
-        <input type="password" name = "password" id = "password" required> 
-        <br>
-        <button id = "submitBtn" type="submit">Submit</button>
-        <br>
-        <p id = "warningBtn"></p>
-    </form>
-    <a style = "text-decoration: none;" href="signup.html">No account? Get one</a>
-    <script src = "js/login.js"></script>
+    <h1 class = "center-align">Login page</h1>
+    <div class="container">
+        <form class = "col s12" id ="form">
+            <div class="row">
+                <div class="input-field">
+                    <label for="email">Enter your email</label>
+                    <input type="email" name = "email" id = "email" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="input-field">
+                    <label for="password">Enter your password</label>
+                    <input type="password" name = "password" id = "password" required> 
+                </div>
+            </div>
+            <br>
+            <div class="center-align">
+                <p id = "warningBtn"></p>
+            </div>
+            <button style="width:100%;" class = "btn green waves-effect hoverable" id = "submitBtn" type="submit">Submit</button><br>
+            <div style="margin-top: 30px;" class="center-align">
+                <a style = "text-decoration: none;" href="signup">No account? Get one</a>
+            </div>
+            <br>
+            
+        </form>
+    </div>
+    
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src = "js/login.js"></script>
 </body>
 </html>
