recs based on likes backend, numerical experience, bug fixes

--- a/views/foodPage.ejs
+++ b/views/foodPage.ejs
@@ -61,7 +61,7 @@
             </div>
       </div>
 
-         <!--Featured foods-->
+         <!--Similar foods-->
     <section class="section section-cardinfo scrollspy">
       
       <div class = "similarFoodsRow">
@@ -72,7 +72,7 @@
           <div class="col s6 m4 l3">
             <div class="card z-depth-1 hoverable">
               <div class="card-image">
-                  <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')"  src="<%= food.photoLink %> " width = 220 height = 220 alt="<%= food.name %>">
+                  <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')"  src="<%= food.photoLink %> " width = 180 height = 240 alt="<%= food.name %>">
               </div>
               <div class="card-action" >
                 <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
