numerical difficulty, bug fixes, like functionality

--- a/views/foodPage.ejs
+++ b/views/foodPage.ejs
@@ -88,6 +88,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script>
       let foodName = `<%=food.name%>`;
+      const likeStatus = `<%=likeStatus%>`;
     </script>
     <script src="<%= root%>/js/foodPage.js"></script>
     <script>
