--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -56,7 +56,7 @@
         <br><br><br><br>
         <div class="section section-cardinfo scrollspy">
           <div id="foodsection">
-              <div class = "row">
+              <div class = "margin-left: 70px;" class = "row">
               <% foods.forEach(function(food) {%>
               <div class="col s6 m4 l3">
                 <div class="card z-depth-1 hoverable">
@@ -91,10 +91,13 @@
   function sendToRelevantPage(id){
     location.href = `<%=root%>/user/food/${id}`;
   }
+  // console.log('<=sideTab%>'); 
   let selectedTab = `<%=tab%>`;
   let selectedSideTab = `<%=sideTab%>`;
 
   document.getElementById('dashboardLink').style.color = '#EE7176'; 
+
+  console.log(`<%=foods%>`);
 </script>
 <script src="<%=root%>/js/dashboard.js"></script>
 
