--- a/views/generalSearch.ejs
+++ b/views/generalSearch.ejs
@@ -43,25 +43,22 @@
     </div>
     
 
-        <!--Featured foods-->
+        <!--Food results-->
     <section class="section section-cardinfo scrollspy">
-
-      <div class = "container">
-        <p class = "center-align" id = "warning"></p>
-        <% foods.forEach(function(food) {%>
-          <div class="row">
-          <div class="col s6 m4 l3">
-            <div class="card z-depth-1 hoverable">
-              <div class="card-image">
-                  <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')"  src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
-              </div>
-              <div class="card-action" >
-                <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
-              </div>
-            </div>
-          </div>
-      <% }); %> 
-      </div> 
+      <p id = "warning" class="center-align"></p>
+      <div class="container">
+        <div class="row">
+            <% if(foods.length>0) {%> 
+                <ul class="collection">
+                    <% foods.forEach(function(food) {%>
+                        <a class="collection-item avatar" href = "<%=root%>/user/food/<%=food._id%>">
+                            <img src="<%= food.photoLink %>" alt="<%= food.name %>" onclick="sendToRelevantPage('<%=food.id%>')" class="circle">
+                            <p class = "teal-text"><strong><%= food.name.toUpperCase() %></strong></p>
+                            <span style="color: #9e9e9e;" class = "title">Category: <%= food.category %></span>
+                    <% }); %> 
+                </ul>
+            <% }%> 
+        </div>
     </div>
     </section>
 
@@ -72,10 +69,6 @@
   function sendToRelevantPage(id){
     location.href = `<%=root%>/user/food/${id}`;
   }
-  document.getElementById('dashboardLink').style.color = '#F3979A'; 
-  document.getElementById('searchLink').style.color = '#EE7176 '; 
-  document.getElementById('settingsLink').style.color = '#F3979A'; 
-  
 </script>
 </body>
 </html>
