--- a/views/searchIngredients.ejs
+++ b/views/searchIngredients.ejs
@@ -31,7 +31,7 @@
                 <div class="row">
                     <div class="input-field col s12">
                     
-                    <input type="text" id="autocomplete-input" class="autocomplete" value = "<%=lastEntered%>">
+                    <input type="text" id="autocomplete-input" class="autocomplete">
                     <label id = "label" for="autocomplete-input">Ingredient name</label>
                     </div>
                     
@@ -47,7 +47,7 @@
             <div class="card-panel">
               <div id = "tags-row" class="row">
                 <%ingredients.forEach(function(ingredient) { %> 
-                <span style = "margin-right: 10px" class = "btn-small"><%=ingredient%><a class='delete-item secondary-content'><i style="padding-right:2px;" class = "white-text center-align material-icons">close</i></a></span>
+                <span style = "margin-right: 10px; border-radius: 25px;" class = "btn-small"><%=ingredient%><a class='delete-item secondary-content'><i style="padding-right:2px;" class = "white-text center-align material-icons">close</i></a></span>
                 <% })%>
               </div>   
             </div>
@@ -60,29 +60,26 @@
         <button style="width: 48%;" id = 'searchBtn' class = "btn  waves-effect"> Search </button>
         <button id = "clearBtn" style="width: 48%;" id = 'outputBtn' class = "btn red darken-1 white-text waves-effect disabled"> Clear </button>
       </div>
-      <div class="row">
-        <p style="margin-top:70px;" class = "center-align" id="warning"></p> 
-      </div>
     </div>
 
         <!--Search result food-->
     <section class="section section-cardinfo scrollspy">
-        <div id="foodsection" class = "container">
-            <% foods.forEach(function(food) {%>
-                <div class="row">
-                   <div class="col s6 m4 l3">
-                        <div class="card z-depth-1 hoverable">
-                            <div class="card-image">
-                                <img class = "card-photo" onclick="sendToRelevantPage('<%=food.id%>')" src="<%= food.photoLink %> " height = 180  alt="<%= food.name %>">
-                            </div>
-                            <div class="card-action" >
-                            <a href="#" style="color: #EE7176;" class = "waves-effect"><%= food.name %> </a>
-                            </div>
-                        </div>
-                    </div>
-            <% }); %> 
-              </div> 
-        </div>
+      <p id = "warning" class="center-align"></p>
+        <div class="container">
+          <div class="row">
+              <% if(foods.length>0) {%> 
+                  <ul class="collection">
+                      <% foods.forEach(function(food) {%>
+                          <a href="<%=root%>/user/food/<%=food._id%>" class="collection-item avatar">
+                              <img src="<%= food.photoLink %>" alt="<%= food.name %>" class="circle">
+                              <p class = "teal-text"><strong><%= food.name.toUpperCase() %></strong></p>
+                              <span style="color: #9e9e9e;" class = "title">Category: <%= food.category %></span>
+                          </a>
+                      <% }); %> 
+                  </ul>
+              <% }%> 
+          </div>
+      </div>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
@@ -93,10 +90,6 @@
       function sendToRelevantPage(id){
         location.href = `<%=root%>/user/food/${id}`;
       }
-      
-      document.getElementById('dashboardLink').style.color = '#F3979A'; 
-      document.getElementById('searchLink').style.color = '#EE7176 '; 
-      document.getElementById('settingsLink').style.color = '#F3979A';
     </script>
 </body>
 </html>
