--- a/views/sideMenuMain.ejs
+++ b/views/sideMenuMain.ejs
@@ -1,5 +1,6 @@
 <p class = "sideMenuText"><strong>Main Menu</strong></p>
 <li><a  href="<%=root %>/user/dashboard">Dashboard</a></li>
-<li><a  href="<%=root %>/user/shoppinglist">Shopping List</a></li>
 <li><a  href = "<%=root%>/user/search">Search</a></li>
-<li><a  href="#">Settings</a></li>
+<li><a  href="#">Favorites</a></li>
+<li><a  href="<%=root %>/user/shoppinglist">Shopping List</a></li>
+
